<resources>
    <string name="app_name">MyTestAC</string>
    <string name="buttonList">mostrar lista de libros</string>
    <string name="titulo">Titulo </string>
    <string name="paginas">Paginas </string>
    <string name="editorial">Editorial </string>
    <string name="autor">Autor </string>
    <string name="descripcion">Descripcion </string>
    <string name="imagen">Url de Imagen </string>
    <string name="Guardar">Guardar </string>

</resources>